Updated to write data into HTML pages.

--- a/config.example.json
+++ b/config.example.json
@@ -3,7 +3,7 @@
   "galleryDir": "gallery",
   "baseURL": "YOUR SITE BASE URL",
   "rootDir": "YOUR SITE ROOT DIR",
-  "perPage": "10",
+  "perPage": 10,
   "title": null,
   "subtitle": null,
   "info": null
