--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
   "rootDir": "/",
   "perPage": 10,
   "title": "Alynx Zhou 的照片墙",
-  "subtitle": "<a href=\"https://sh.alynx.one/\" target=\"_blank\" rel=\"external nofollow noreferrer noopener\">Alynx Zhou 的博客</a>",
-  "info": "<a href=\"https://github.com/AlynxZhou/azgallery/\" target=\"_blank\" rel=\"external nofollow noreferrer noopener\">照片墙源码</a>"
+  "subtitle": "港湾晚灯 山顶破晓",
+  "info": "<a href=\"https://sh.alynx.one/\" target=\"_blank\" rel=\"external nofollow noreferrer noopener\">Alynx Zhou 的博客</a> <a href=\"https://github.com/AlynxZhou/azgallery/\" target=\"_blank\" rel=\"external nofollow noreferrer noopener\">照片墙源码</a>"
 }
